--- a/starterpack/notebooks/03_pandas_eda.ipynb
+++ b/starterpack/notebooks/03_pandas_eda.ipynb
@@ -1,98 +1,122 @@
 {
-  "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "# 03 · Pandas + EDA con dataset de ventas\n",
-        "Objetivo: cargar, limpiar, explorar y visualizar."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {},
-      "execution_count": null,
-      "outputs": [],
-      "source": [
-        "import pandas as pd\n",
-        "import matplotlib.pyplot as plt\n",
-        "df = pd.read_csv('../data/raw/sales.csv', parse_dates=['date'])\n",
-        "df.head()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {},
-      "execution_count": null,
-      "outputs": [],
-      "source": [
-        "# Info y descriptivos\n",
-        "display(df.info())\n",
-        "df.describe(numeric_only=True)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {},
-      "execution_count": null,
-      "outputs": [],
-      "source": [
-        "# Ingresos diarios\n",
-        "daily = df.groupby('date', as_index=False)['revenue'].sum()\n",
-        "plt.figure()\n",
-        "plt.plot(daily['date'], daily['revenue'])\n",
-        "plt.title('Ingresos diarios')\n",
-        "plt.xlabel('Fecha'); plt.ylabel('Revenue'); plt.tight_layout()\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {},
-      "execution_count": null,
-      "outputs": [],
-      "source": [
-        "# Ventas por categoría\n",
-        "by_cat = df.groupby('category', as_index=False)['revenue'].sum().sort_values('revenue', ascending=False)\n",
-        "plt.figure()\n",
-        "plt.bar(by_cat['category'], by_cat['revenue'])\n",
-        "plt.title('Revenue por categoría'); plt.xticks(rotation=30); plt.tight_layout()\n",
-        "by_cat"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {},
-      "execution_count": null,
-      "outputs": [],
-      "source": [
-        "# Boxplot por canal\n",
-        "import numpy as np\n",
-        "plt.figure()\n",
-        "df.boxplot(column='revenue', by='channel', grid=False)\n",
-        "plt.suptitle(''); plt.title('Distribución de revenue por canal'); plt.tight_layout()\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### Entregable\n",
-        "- 3 gráficos limpios (línea, barras, caja) con títulos/ejes.\n",
-        "- 3 hallazgos concretos en texto (ej. estacionalidad, top categorías, ticket promedio)."
-      ]
-    }
-  ],
-  "metadata": {
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3",
-      "language": "python"
-    },
-    "language_info": {
-      "name": "python",
-      "version": "3.11"
-    }
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 03 · Pandas + EDA con dataset de ventas\n",
+    "Objetivo: cargar, limpiar, explorar y visualizar."
+   ],
+   "id": "9308b80ce09da937"
   },
-  "nbformat": 4,
-  "nbformat_minor": 5
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "df = pd.read_csv('../data/raw/sales.csv', parse_dates=['date'])\n",
+    "df.head()"
+   ],
+   "id": "92d6acbd40d36f45"
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Info y descriptivos\n",
+    "display(df.info())\n",
+    "df.describe(numeric_only=True)"
+   ],
+   "id": "96bfbc70f71043ee"
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Ingresos diarios\n",
+    "daily = df.groupby('date', as_index=False)['revenue'].sum()\n",
+    "plt.figure()\n",
+    "plt.plot(daily['date'], daily['revenue'])\n",
+    "plt.title('Ingresos diarios')\n",
+    "plt.xlabel('Fecha'); plt.ylabel('Revenue'); plt.tight_layout()\n"
+   ],
+   "id": "633ff35db1ac4fbb"
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Ventas por categoría\n",
+    "by_cat = df.groupby('category', as_index=False)['revenue'].sum().sort_values('revenue', ascending=False)\n",
+    "plt.figure()\n",
+    "plt.bar(by_cat['category'], by_cat['revenue'])\n",
+    "plt.title('Revenue por categoría'); plt.xticks(rotation=30); plt.tight_layout()\n",
+    "by_cat"
+   ],
+   "id": "316890aadc9addd0"
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-29T00:31:32.195549Z",
+     "start_time": "2025-10-29T00:31:32.172257Z"
+    }
+   },
+   "source": [
+    "# Boxplot por canal\n",
+    "import numpy as np\n",
+    "plt.figure()\n",
+    "df.boxplot(column='revenue', by='channel', grid=False)\n",
+    "plt.suptitle(''); plt.title('Distribución de revenue por canal'); plt.tight_layout()\n"
+   ],
+   "id": "c18236b60f91b64c",
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'plt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mNameError\u001B[39m                                 Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[2]\u001B[39m\u001B[32m, line 3\u001B[39m\n\u001B[32m      1\u001B[39m \u001B[38;5;66;03m# Boxplot por canal\u001B[39;00m\n\u001B[32m      2\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[34;01mnumpy\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[34;01mnp\u001B[39;00m\n\u001B[32m----> \u001B[39m\u001B[32m3\u001B[39m \u001B[43mplt\u001B[49m.figure()\n\u001B[32m      4\u001B[39m df.boxplot(column=\u001B[33m'\u001B[39m\u001B[33mrevenue\u001B[39m\u001B[33m'\u001B[39m, by=\u001B[33m'\u001B[39m\u001B[33mchannel\u001B[39m\u001B[33m'\u001B[39m, grid=\u001B[38;5;28;01mFalse\u001B[39;00m)\n\u001B[32m      5\u001B[39m plt.suptitle(\u001B[33m'\u001B[39m\u001B[33m'\u001B[39m); plt.title(\u001B[33m'\u001B[39m\u001B[33mDistribución de revenue por canal\u001B[39m\u001B[33m'\u001B[39m); plt.tight_layout()\n",
+      "\u001B[31mNameError\u001B[39m: name 'plt' is not defined"
+     ]
+    }
+   ],
+   "execution_count": 2
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Entregable\n",
+    "- 3 gráficos limpios (línea, barras, caja) con títulos/ejes.\n",
+    "- 3 hallazgos concretos en texto (ej. estacionalidad, top categorías, ticket promedio)."
+   ],
+   "id": "caf9f9e6d3987cf2"
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "name": "python3",
+   "display_name": "Python 3",
+   "language": "python"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.11"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
 }
